--- a/src/renderer/src/style.scss
+++ b/src/renderer/src/style.scss
@@ -22,6 +22,7 @@ input[type='submit'] {
   border: 1px solid darken($accent-color, 10);
   color: white;
   padding: 0.5em;
+  cursor: pointer;
   &:hover {
     background-color: lighten($accent-color, 10);
   }
@@ -31,6 +32,16 @@ input[type='submit'] {
   &.full-width {
     width: 100%;
     margin: 1em 0;
+  }
+  &.secondary {
+    background-color: lighten($accent-color, 40);
+    border-color: $accent-color;
+    color: $accent-color;
+  }
+  &.delete {
+    background-color: rgba(255, 255, 255, 0);
+    border: none;
+    padding: 0 0.5em;
   }
 }
 
